Make sure all exceptions are caught when a ChunkDownload is loaded from disk. This will prevent bug 141758 from happening.

BUG: 141758


svn path=/trunk/extragear/network/ktorrent/; revision=634518